2006-01-24  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_dot_dir),
	(ephy_file_helpers_init):
	* lib/ephy-file-helpers.h:
	* src/ephy-dbus.c:
	* src/ephy-main.c: (unref_proxy_reply_cb), (open_urls), (main):

	Run the main loop until the reply is received when
	activating a running instance. Fixes URL opening with
	two concurrently starting instance.

2006-01-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus):

	Use DBUS_NAME_FLAG_DO_NOT_QUEUE when requesting the name,
	and also handle unexpected request return values.

2006-01-23  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb):
	* src/bookmarks/ephy-topic-action-group.c: (node_added_cb):

	Fix a couple of memory leaks

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:
	
	Fix compilation with libgnome 2.13. Bug #328351.

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-service.xml:
	* src/ephy-activation.c: (ephy_activation_load_url),
	(ephy_activation_open_bookmarks_editor):
	* src/ephy-activation.h:

	Removed add-bookmark and import-bookmarks functions,
	and changed load-url to use an options string instead of
	loads of booleans.
	
	* src/ephy-main.c: (unref_proxy_reply_cb), (open_urls),
	(call_dbus_proxy):

	Adapt to changed dbus call signatures.
	Fixes open-in-new-tab/window from cmd line.

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(ephy_ensure_dir_exists):
	* lib/ephy-file-helpers.h:

	Add a GError** to ephy_file_helpers_init and ephy_ensure_dir_exists,
	so we can show the error to the user in main().

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus_cb),
	(ephy_dbus_connect_to_system_bus_cb), (session_filter_func),
	(system_filter_func), (ephy_dbus_connect_to_system_bus),
	(ephy_dbus_connect_to_session_bus), (ephy_dbus_shutdown),